Edit pom.xml to suppress unnecessary warnings.